--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "deepfake_detector",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "author": "Lav-Prince-Subro",
+  "license": "MIT",
+  "description": "deepfake detector and watermarker",
+  "dependencies": {
+    "colors": "^1.4.0",
+    "express": "^4.21.2"
+  }
 }
