--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "colors": "^1.4.0",
     "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "vite": "^6.0.7"
   }
 }
